# JSPico

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  create-data.sh  flash.sh  readme.md
fs/: board-cfg.js  board.cfg  index.htm  index.html  index.js  licence.txt  readme.txt
src/: .gitignore  disc_data.c  main.c  main.cpp  main.h  msc_disk.c  tusb_config.h  usb_descriptors.c
src/boot/: boot.c  boot.h
src/config/: _lib.cmake  config.h
src/fatfs/: diskio.c  diskio.h  ff.c  ff.h  ffconf.h
src/flash/: flash.c  flash.h  flash_disk.c  flash_disk.h
src/freertos/: FreeRTOSConfig.h  port.c
src/hw/: led.c  led.h
src/js/: js.h  js_module.h  js_modules.h  mjson.c  mjson.h
src/log/: log.c  log.h
src/lwip/: fsdata.c  tusb_lwip_glue.c  tusb_lwip_glue.h  webserver.c
src/modules/: _lib.cmake
src/modules/md_board/: board.h  md_board.c  md_board.h
src/modules/md_console/: console.h  md_console.c  md_console.h
src/modules/md_fs/: fs.h  md_fs.c  md_fs.h
src/modules/md_global/: global.h  md_global.c  md_global.h
src/modules/md_gpio/: gpio.h  md_gpio.c  md_gpio.h
src/msc/: msc_disk.c  msc_disk.h  msc_disk_data.c
src/system/: JSPico.cpp  JSPico.h  _lib.cmake
src/task/: Task.cpp  Task.h  TaskArgs.cpp  TaskArgs.h  TaskManager.cpp  TaskManager.h  _lib.cmake
src/task_blink/: BlinkTask.cpp  BlinkTask.h  BlinkTaskArgs.h  _lib.cmake
src/task_boot_sel/: BootSelTask.cpp  BootSelTask.h  _lib.cmake
src/task_js/: JSTask.cpp  JSTask.h  _lib.cmake  js.c  mjson.c
src/task_msc/: MSCTask.cpp  MSCTask.h  _lib.cmake
src/task_web_server/: WebServerTask.cpp  WebServerTask.h  _lib.cmake  fsdata.c  lwipopts.h  tusb_config.h  tusb_lwip_glue.c  usb_descriptors.c
src/task_web_server/arch/: cc.h
src/tasks/: stask.h  task_js.c  task_js.h  task_main.c  task_main.h  tasks.h
src/usb/: tusb_config.h  usb_descriptors.c
src/utils/: _lib.cmake  base64.c  base64.h
src/vfs_fat/: Device.cpp  Device.h  FileSystem.cpp  FileSystem.h  FlashDisk.cpp  FlashDisk.h  RamDisk.cpp  RamDisk.h  VfsFat.cpp  VfsFat.h  _lib.cmake  diskio.cpp  diskio.h  ff.c  ffconf.h
targets/rp2/boards/rp2040/: board.c  board.h
targets/seeed/boards/nrf52840/: board.c  board.h
tools/: README.md  gdbm  oocd  pif  pir
